# neochat

./: .appveyor.yml  .contextProperties.ini  .craft.ini  .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .gitmodules  .kde-ci.yml  .travis.yml  BUILD.md  CMakeLists.txt  LICENSE  Messages.sh  README.md  REUSE.toml  com.gitlab.matrique.json  font.qrc  generated-sources.json  main.cpp  matrique.appdata.xml  matrique.pro  neochat.notifyrc  org.eu.encom.matrique.appdata.xml  org.eu.encom.matrique.desktop  org.eu.encom.matrique.json  org.eu.encom.spectral.appdata.xml  org.eu.encom.spectral.desktop  org.kde.neochat.appdata.xml  org.kde.neochat.desktop  qtquickcontrols2.conf  res.qrc  res_android.qrc  res_desktop.qrc  snapcraft.yaml  spectral.pro
appiumtests/: CMakeLists.txt  createroomtest.py  login-server.py  logintest.py  openuserdetailstest.py
appiumtests/data/: sync_response_new_room.json  sync_response_no_rooms.json  sync_response_rooms.json
autotests/: CMakeLists.txt  actionshandlertest.cpp  actionstest.cpp  blockcachetest.cpp  chatbar_qml.qml  chatbarcachetest.cpp  chatbarmessagecontentmodeltest.cpp  chatdocumenthandlertest.cpp  chatdocumenthelpertest.qml  chatkeyhelpertest.qml  chatkeyhelpertesthelper.h  chatmarkdownhelpertest.qml  chatmarkdownhelpertestwrapper.h  chattextitemhelpertest.qml  chattextitemhelpertesthelper.h  chattextitemhelpertestwrapper.h  delegatesizehelpertest.cpp  eventhandlertest.cpp  filepreviewtest.cpp  linkpreviewertest.cpp  mediasizehelpertest.cpp  messagecontentmodeltest.cpp  messageeventmodeltest.cpp  modeltest.cpp  neochatroomtest.cpp  pollblocktest.cpp  pollhandlertest.cpp  qmltest.cpp  qmltextitemwrappertest.qml  qmltextitemwrappertestwrapper.h  reactionmodeltest.cpp  roommanagertest.cpp  roomtreemodeltest.cpp  server.cpp  server.h  servernoticestest.cpp  testutils.h  texthandlertest.cpp  timelinemessagemodeltest.cpp  tst_media.qml  (+1 more)
autotests/data/: TestText.txt  eventreservation.ics  localhost.crt  localhost.key  test-eventhandler-sync.json  test-invalidmatrixtolink-event.json  test-invalidmxclink-event.json  test-invalidnospacelink-event.json  test-linkpreviewerintial-sync.json  test-linkpreviewerreplace-sync.json  test-messageventmodel-sync.json  test-min-sync-extra-sync.json  test-min-sync.json  test-multiplelink-event.json  test-pending-sync.json  test-pollhandlerstart-sync.json  test-reactionmodel-extra-sync.json  test-reactionmodel-sync.json  test-texthandler-sync.json  test-validplainlink-event.json  test-validplainwwwlink-event.json  test-validrichlink-event.json
memorytests/: CMakeLists.txt  Main.qml  main.cpp  memtest-sync.json  memtesttimelinemodel.cpp  memtesttimelinemodel.h
src/: CMakeLists.txt  accountlistmodel.cpp  accountlistmodel.h  accountregistry.cpp  accountregistry.h  actionshandler.cpp  actionshandler.h  actionsmodel.cpp  actionsmodel.h  blurhash.cpp  blurhash.h  blurhash.hpp  blurhashimageprovider.cpp  blurhashimageprovider.h  chatbarcache.cpp  chatbarcache.h  chatboxhelper.cpp  chatboxhelper.h  chatdocumenthandler.cpp  chatdocumenthandler.h  clipboard.cpp  clipboard.h  collapsestateproxymodel.cpp  collapsestateproxymodel.h  colorschemer.cpp  colorschemer.h  commandmodel.cpp  commandmodel.h  completionmodel.cpp  completionmodel.h  completionproxymodel.cpp  completionproxymodel.h  contentprovider.cpp  contentprovider.h  controller.cpp  controller.h  customemojimodel+network.cpp  customemojimodel.cpp  customemojimodel.h  customemojimodel_p.h  (+169 more)
src/app/: CMakeLists.txt  blurhash.cpp  blurhash.h  blurhashimageprovider.cpp  blurhashimageprovider.h  controller.cpp  controller.h  fakerunner.cpp  foreigntypes.h  foriegntypes.cpp  logger.cpp  logger.h  main.cpp  mediamanager.cpp  mediamanager.h  neochat.notifyrc  neochatconfig.kcfg  notificationsmanager.cpp  notificationsmanager.h  plasma-runner-neochat.desktop  proxycontroller.h  roommanager.cpp  roommanager.h  runner.cpp  runner.h  sharehandler.cpp  supportcontroller.cpp  supportcontroller.h  texttospeechhelper.cpp  texttospeechhelper.h  trayicon.cpp  trayicon.h  trayicon_sni.cpp  trayicon_sni.h  windowcontroller.cpp  windowcontroller.h
src/call/: audiosources.cpp  audiosources.h  calldevices.cpp  calldevices.h  callmanager.cpp  callmanager.h  callnegotiateevent.cpp  callnegotiateevent.h  callparticipant.cpp  callparticipant.h  callsession.cpp  callsession.h  devicemonitor.cpp  devicemonitor.h  videosources.cpp  videosources.h
src/calls/: call.h  callcontroller.cpp  callcontroller.h
src/chatbar/: AttachDialog.qml  CMakeLists.txt  ChatBar.qml  ChatBarCore.qml  CompletionMenu.qml  EmojiDelegate.qml  EmojiDialog.qml  EmojiGrid.qml  EmojiPicker.qml  EmojiTonesPicker.qml  ImageDialog.qml  ImageEditorPage.qml  LinkDialog.qml  LocationChooser.qml  NewPollDialog.qml  ReplyPane.qml  RichEditBar.qml  SendBar.qml  StyleButton.qml  StyleDelegate.qml  StylePicker.qml  TableDialog.qml  VoiceMessageDialog.qml  chatbuttonhelper.cpp  chatbuttonhelper.h  styledelegatehelper.cpp  styledelegatehelper.h
src/data/: emojis.data  emojis.json.license  emojitones_data.h
src/devtools/: AccountData.qml  CMakeLists.txt  DebugOptions.qml  DevtoolsPage.qml  FeatureFlagPage.qml  RoomData.qml  ServerData.qml  StateKeys.qml
src/enums/: delegatetype.h  messagecomponenttype.h  neochatroomtype.h  powerlevel.cpp  pushrule.h  roomsortparameter.cpp  roomsortparameter.h
src/events/: callencryptionkeysevent.h  callmemberevent.cpp  callmemberevent.h  callnotifyevent.h  imagepackevent.cpp  imagepackevent.h  joinrulesevent.h  pollevent.cpp  pollevent.h  serveraclevent.h  stickerevent.h
src/jobs/: neochatadd3pidjob.cpp  neochatadd3pidjob.h  neochatchangepasswordjob.cpp  neochatchangepasswordjob.h  neochatdeactivateaccountjob.cpp  neochatdeactivateaccountjob.h  neochatdeletedevicejob.cpp  neochatdeletedevicejob.h  neochatgetcommonroomsjob.cpp  neochatgetcommonroomsjob.h
src/kandroidextras/: CMakeLists.txt  README.md  README.md.license
src/libneochat/: CMakeLists.txt  accountmanager.cpp  accountmanager.h  block.cpp  block.h  blockcache.cpp  blockcache.h  callmanager.cpp  callmanager.h  chatbarcache.cpp  (+59 more)
(+1546 files in other folders)
